<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/sfbianco"
    android:id="@+id/relativeLayout2">


    <Button
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:text="Setting"
        android:id="@+id/set"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:text="@string/giorni"
        android:id="@+id/gio"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:text="@string/mesi"
        android:id="@+id/mes"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/relativeLayout2">
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/annulla"
        android:id="@+id/ann"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</RelativeLayout>