<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="310dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <TextView
        android:id="@+id/textRestoMese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/resto_fin_qui"
        android:textSize="20sp">
    </TextView>
    <TextView
        android:id="@+id/textRestFinOre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textRestoMese"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp">

    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/textRestoMese"
        android:src="@drawable/linea_sotto"
        android:layout_marginTop="15dp"
        >

    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lavorato"
        android:id="@+id/textView9"
        android:textSize="20sp"
        android:layout_below="@+id/textRestoMese"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:id="@+id/textVidimeOre"
        android:layout_marginRight="30dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagato"
        android:textSize="20sp"
        android:id="@+id/textView10"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />



    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageMatita"
        android:src="@drawable/matita"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageX"
        android:src="@drawable/x"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textVidimeOre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:id="@+id/textVidimeOrepag"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textVidimeOre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" >

    </TextView>
    <TextView
        android:id="@+id/textResto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/resto"
        android:layout_below="@+id/textVidimeOrepag"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp">
    </TextView>
    <TextView
        android:id="@+id/textRestoOre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textResto"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true">

    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/linea_sotto"
        android:rotation="180"

        >

    </ImageView>

</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:text="OK"
            android:id="@+id/buttonok"

            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:text="@string/annulla"
            android:id="@+id/buttonann"

            android:layout_alignTop="@+id/buttonok"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:text="@string/mese"
            android:id="@+id/buttonmes"

            android:layout_alignTop="@+id/buttonann"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>